# neurowm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c  neurowm.1
conf/: default_neurowm.c  nnoell_neurowm.c
examples/: default_neurowm.c  nnoell_neurowm.c  null_neurowm.c
man/: neurowm.1
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml
neuro/: area.c  area.h  base.c  base.h  client.c  client.h  config.h  dzenpanel.c  dzenpanel.h  event.c  event.h  general.c  general.h  geometry.c  layout.c  layout.h  neurowm.c  neurowm.h  personal.c  personal.h  rule.c  rule.h  stackset.c  stackset.h  system.c  system.h  type.c  workspace.c  workspace.h
pkgbuild/: neurowm.desktop
pkgbuild/cmake/: PKGBUILD
src/: main.c
src/neuro/: CMakeLists.txt  action.c  action.h  client.c  client.h  config.c  config.h  core.c  core.h  dzen.c  dzen.h  dzenpanel.c  dzenpanel.h  event.c  event.h  geometry.c  geometry.h  layout.c  layout.h  monitor.c  monitor.h  neurowm.c  neurowm.h  personal.c  personal.h  rule.c  rule.h  stackset.c  stackset.h  system.c  system.h  theme.c  theme.h  type.c  type.h  wm.c  wm.h  workspace.c  workspace.h
src/test/: cunit_test.c  neurowm_test.c
test/: cunit_test.c  neurowm.c  neurowm_test.c
themes/: README.md
themes/nnoell/neurowm/scripts/: dzencal.sh
themes/nnoell/neurowm/xbm_icons/: boxleft.xbm  boxleft2.xbm  boxright.xbm
